// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`readme closed-source 1`] = `
Array [
  README.md,
  package.json,
]
`;

exports[`readme open-source 1`] = `
Array [
  LICENSE,
  README.md,
  package.json,
]
`;
